[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Player/Astro-Knife/Knife-Circle.gd" type="Script" id=1]
[ext_resource path="res://Art Assets/Placeholder/Knife-Point.tres" type="SpriteFrames" id=2]

[node name="Knife-Circle" type="Node2D"]
script = ExtResource( 1 )

[node name="up" type="AnimatedSprite" parent="."]
frames = ExtResource( 2 )
animation = "off"
offset = Vector2( 0, -48 )

[node name="down" type="AnimatedSprite" parent="."]
frames = ExtResource( 2 )
animation = "off"
offset = Vector2( 0, 48 )

[node name="left" type="AnimatedSprite" parent="."]
frames = ExtResource( 2 )
animation = "off"
offset = Vector2( -48, 0 )

[node name="right" type="AnimatedSprite" parent="."]
frames = ExtResource( 2 )
animation = "off"
offset = Vector2( 48, 0 )

[node name="u_left" type="AnimatedSprite" parent="."]
frames = ExtResource( 2 )
animation = "off"
offset = Vector2( -32, -32 )

[node name="d_left" type="AnimatedSprite" parent="."]
frames = ExtResource( 2 )
animation = "off"
offset = Vector2( -32, 32 )

[node name="u_right" type="AnimatedSprite" parent="."]
frames = ExtResource( 2 )
animation = "off"
offset = Vector2( 32, -32 )

[node name="d_right" type="AnimatedSprite" parent="."]
frames = ExtResource( 2 )
animation = "off"
offset = Vector2( 32, 32 )

